--- a/src/app/product/components/product-list/product-list.component.scss
+++ b/src/app/product/components/product-list/product-list.component.scss
@@ -1,12 +1,13 @@
 @import 'tables.scss';
 
 $c1Width: 20%;
-$c2Width: 20%;
-$c3Width: 20%;
+$c2Width: 15%;
+$c3Width: 15%;
 $c4Width: 10%;
-$c5Width: 20%;
-$c6Width: 10%;
-$tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width + $c6Width;
+$c5Width: 10%;
+$c6Width: 20%;
+$c7Width: 10%;
+$tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width + $c6Width + $c7Width;
 
 @mixin thTdWidth($width) {
     width: $width;
@@ -42,6 +43,10 @@ $tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width + $c6Width;
         tbody td:nth-child(6),
         thead th:nth-child(6) {
             @include thTdWidth($c6Width);
+        }
+        tbody td:nth-child(7),
+        thead th:nth-child(7) {
+            @include thTdWidth($c7Width);
         }
 
         tr {
