--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -2,6 +2,8 @@
 $feature-root-background: #e8e8e8;
 $feature-title-color: #3f025d;
 $feature-list-detail-title-color: #b71a73;
+$feature-title-color: #0367ef;
+$list-detail-title-color: #0367ef;
 // TABLE:
 $table-td-text: #636363;
 $table-row-even-background: #f4f4f4;
