--- a/src/app/product/components/product-form/product-form.component.html
+++ b/src/app/product/components/product-form/product-form.component.html
@@ -1,48 +1,54 @@
 <div class="container">
-    <div class="form-title">Détails</div>
-    <form *ngIf="form" [formGroup]="form" (submit)="onSubmit(form)">
-        <div class="control">
-            <label>
-                Nom *
-            </label>
-            <input #first formControlName="name" type="text" />
-            <app-validation-error
-                [control]="form.controls['name']"
-                [customErrorLabels]="{ duplicateEntry: 'Ce nom existe déjà' }"
-            ></app-validation-error>
-        </div>
-        <div class="control">
-            <label>
-                Prix Unitaire *
-            </label>
-            <input formControlName="costPrice" type="number" min="0" appDigitOnly />
-            <app-validation-error [control]="form.controls['costPrice']"></app-validation-error>
-        </div>
-        <div class="control">
-            <label>
-                Prix de vente *
-            </label>
-            <input formControlName="sellingPrice" type="number" min="0" appDigitOnly />
-            <app-validation-error [control]="form.controls['sellingPrice']"></app-validation-error>
-        </div>
-        <div class="control">
-            <label>
-                Quantité *
-            </label>
-            <input formControlName="quantity" type="number" min="0" appDigitOnly />
-            <app-validation-error [control]="form.controls['quantity']"></app-validation-error>
-        </div>
-        <div class="control">
-            <label for="supplier">Fournisseur *</label>
-            <div class="custom-select">
-                <ng-select
-                    [items]="suppliers"
-                    bindLabel="name"
-                    formControlName="supplier"
-                ></ng-select>
+    <header>
+        <div class="form-title">Détails</div>
+    </header>
+    <main data-simplebar>
+        <form *ngIf="form" [formGroup]="form">
+            <div class="control">
+                <label>
+                    Nom *
+                </label>
+                <input #first formControlName="name" type="text" />
+                <app-validation-error
+                    [control]="form.controls['name']"
+                    [customErrorLabels]="{ duplicateEntry: 'Ce nom existe déjà' }"
+                ></app-validation-error>
             </div>
-            <app-validation-error [control]="form.controls['supplier']"></app-validation-error>
-        </div>
+            <div class="control">
+                <label>
+                    Prix Unitaire *
+                </label>
+                <input formControlName="costPrice" type="number" min="0" appDigitOnly />
+                <app-validation-error [control]="form.controls['costPrice']"></app-validation-error>
+            </div>
+            <div class="control">
+                <label>
+                    Prix de vente *
+                </label>
+                <input formControlName="sellingPrice" type="number" min="0" appDigitOnly />
+                <app-validation-error [control]="form.controls['sellingPrice']"></app-validation-error>
+            </div>
+            <div class="control">
+                <label>
+                    Quantité *
+                </label>
+                <input formControlName="quantity" type="number" min="0" appDigitOnly />
+                <app-validation-error [control]="form.controls['quantity']"></app-validation-error>
+            </div>
+            <div class="control">
+                <label for="supplier">Fournisseur *</label>
+                <div class="custom-select">
+                    <ng-select
+                        [items]="suppliers"
+                        bindLabel="name"
+                        formControlName="supplier"
+                    ></ng-select>
+                </div>
+                <app-validation-error [control]="form.controls['supplier']"></app-validation-error>
+            </div>
+        </form>
+    </main>
+    <footer>
         <div class="buttons">
             <button
                 class="blue"
@@ -52,11 +58,10 @@
             >
                 MODIFIER
             </button>
-            <button class="blue" *ngIf="form.enabled" type="submit">ENREGISTRER</button>
+            <button class="blue" *ngIf="form.enabled" (click)="onSubmit(form)">ENREGISTRER</button>
             <button class="dark-purple" *ngIf="form.enabled" (click)="cancel.emit()">
                 ANNULER
             </button>
         </div>
-    </form>
+    </footer>
 </div>
->
