--- a/src/app/supplier/components/supplier-form/supplier-form.component.scss
+++ b/src/app/supplier/components/supplier-form/supplier-form.component.scss
@@ -1,10 +1,10 @@
 @import 'forms.scss';
 @import 'buttons.scss';
 @import 'texts.scss';
+@import 'details.scss';
 
 .container {
-    width: 100%;
-    height: 100%;
+    @extend %detail-layout;
 }
 
 .form-title {
