--- a/src/app/user/components/user-form/user-form.component.html
+++ b/src/app/user/components/user-form/user-form.component.html
@@ -1,46 +1,52 @@
 <div class="container">
-    <div class="form-title">Détails</div>
-    <form *ngIf="form" [formGroup]="form" (submit)="onSubmit(form)">
-        <div class="control">
-            <label for="lastname">Nom</label>
-            <input #first formControlName="lastname" id="lastname" type="text" />
-            <app-validation-error [control]="form.controls['lastname']"></app-validation-error>
-        </div>
-        <div class="control">
-            <label for="firstname">Prénom(s)</label>
-            <input formControlName="firstname" id="firstname" type="text" />
-            <app-validation-error [control]="form.controls['firstname']"></app-validation-error>
-        </div>
-        <div class="control">
-            <label for="login">Login *</label>
-            <input formControlName="login" id="login" type="text" />
-            <app-validation-error [control]="form.controls['login']"></app-validation-error>
-        </div>
-        <div class="control">
-            <label for="password">Mot de passe *</label>
-            <input formControlName="password" id="password" type="password" />
-            <app-validation-error [control]="form.controls['password']"></app-validation-error>
-        </div>
-        <div class="control">
-            <label for="confirmPassword">Confirmation mot de passe *</label>
-            <input formControlName="confirmPassword" id="confirmPassword" type="password" />
-            <app-validation-error
-                [control]="form.controls['confirmPassword']"
-            ></app-validation-error>
-        </div>
-        <div class="control">
-            <label for="role">Rôle *</label>
-            <div class="custom-select">
-                <ng-select
-                    [dropdownPosition]="'bottom'"
-                    [items]="roles"
-                    [searchable]="false"
-                    bindLabel="name"
-                    formControlName="role"
-                ></ng-select>
+    <header>
+        <div class="form-title">Détails</div>
+    </header>
+    <main data-simplebar>
+        <form *ngIf="form" [formGroup]="form">
+            <div class="control">
+                <label for="lastname">Nom</label>
+                <input #first formControlName="lastname" id="lastname" type="text" />
+                <app-validation-error [control]="form.controls['lastname']"></app-validation-error>
             </div>
-            <app-validation-error [control]="form.controls['role']"></app-validation-error>
-        </div>
+            <div class="control">
+                <label for="firstname">Prénom(s)</label>
+                <input formControlName="firstname" id="firstname" type="text" />
+                <app-validation-error [control]="form.controls['firstname']"></app-validation-error>
+            </div>
+            <div class="control">
+                <label for="login">Login *</label>
+                <input formControlName="login" id="login" type="text" />
+                <app-validation-error [control]="form.controls['login']"></app-validation-error>
+            </div>
+            <div class="control">
+                <label for="password">Mot de passe *</label>
+                <input formControlName="password" id="password" type="password" />
+                <app-validation-error [control]="form.controls['password']"></app-validation-error>
+            </div>
+            <div class="control">
+                <label for="confirmPassword">Confirmation mot de passe *</label>
+                <input formControlName="confirmPassword" id="confirmPassword" type="password" />
+                <app-validation-error
+                    [control]="form.controls['confirmPassword']"
+                ></app-validation-error>
+            </div>
+            <div class="control">
+                <label for="role">Rôle *</label>
+                <div class="custom-select">
+                    <ng-select
+                        [dropdownPosition]="'bottom'"
+                        [items]="roles"
+                        [searchable]="false"
+                        bindLabel="name"
+                        formControlName="role"
+                    ></ng-select>
+                </div>
+                <app-validation-error [control]="form.controls['role']"></app-validation-error>
+            </div>
+        </form>
+    </main>
+    <footer>
         <div class="buttons">
             <button
                 class="blue"
@@ -50,10 +56,10 @@
             >
                 MODIFIER
             </button>
-            <button class="blue" *ngIf="form.enabled" type="submit">ENREGISTRER</button>
+            <button class="blue" *ngIf="form.enabled" (click)="onSubmit(form)">ENREGISTRER</button>
             <button class="dark-purple" *ngIf="form.enabled" (click)="cancel.emit()">
                 ANNULER
             </button>
         </div>
-    </form>
+    </footer>
 </div>
