--- a/src/app/user/components/user-form/user-form.component.scss
+++ b/src/app/user/components/user-form/user-form.component.scss
@@ -1,10 +1,10 @@
 @import 'forms.scss';
 @import 'buttons.scss';
 @import 'texts.scss';
+@import 'details.scss';
 
 .container {
-    width: 100%;
-    height: 100%;
+    @extend %detail-layout;
 }
 
 .form-title {
@@ -14,10 +14,6 @@
 
 form {
     @extend %generic-form;
-
-    .control {
-        @extend %generic-control;
-    }
 }
 
 .buttons {
