--- a/src/styles/_details.scss
+++ b/src/styles/_details.scss
@@ -1,5 +1,41 @@
-%details {
-    line-height: 40px;
-    text-align: left;
-    padding-left: 10px;
+@import 'texts.scss';
+
+%detail-layout {
+    background-color: #ffffff;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 2% minmax(0, 1fr) 2%;
+    grid-template-rows: 40px auto 40px;
+    grid-template-areas:
+        ".      header      ."
+        ".      main        ."
+        ".      footer      .";
+    border-radius: 8px;
+
+    header {
+        grid-area: header;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 10px;
+        padding-bottom: 10px;
+
+        .form-title {
+            @extend %list-detail-title;
+        }
+    }
+
+    main {
+        grid-area: main;
+    }
+
+    footer {
+        grid-area: footer;
+
+        button {
+            @extend %button;
+            margin-bottom: 10px;
+        }
+    }
 }
