--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -293,7 +293,7 @@ $date-padding: 5px;
 }
 
 %generic-form {
-    max-width: $generic-form-width;
+    max-width: 100%;
 
     .control {
         @extend %generic-control;
