--- a/src/app/client/components/client-form/client-form.component.html
+++ b/src/app/client/components/client-form/client-form.component.html
@@ -3,7 +3,7 @@
         <div class="form-title">Détails</div>
     </header>
     <main data-simplebar>
-        <form *ngIf="form" [formGroup]="form" (submit)="onSubmit(form)">
+        <form *ngIf="form" [formGroup]="form">
             <div class="control">
                 <label>
                     Nom *
@@ -50,7 +50,7 @@
             >
                 MODIFIER
             </button>
-            <button class="blue" *ngIf="form.enabled" type="submit">ENREGISTRER</button>
+            <button class="blue" *ngIf="form.enabled" type="submit" (click)="onSubmit(form)">ENREGISTRER</button>
             <button class="dark-purple" *ngIf="form.enabled" (click)="cancel.emit()">ANNULER</button>
         </div>
     </footer>
