--- a/src/app/client/containers/client-root/client-root.component.html
+++ b/src/app/client/containers/client-root/client-root.component.html
@@ -30,6 +30,20 @@
     </div>
 </div>
 
+<modal #successfullSavingModal class="popup-modal success">
+    <ng-template #modalHeader>
+        Succès
+    </ng-template>
+    <ng-template #modalBody>
+        Element enregistré avec success
+    </ng-template>
+    <ng-template #modalFooter>
+        <button class="blue" (click)="successfullSavingModal.close()">
+            OK
+        </button>
+    </ng-template>
+</modal>
+
 <modal #deletionConfirmModal class="popup-modal warning">
     <ng-template #modalHeader>
         Confirmation
