--- a/src/app/sale/containers/sale-root/sale-root.component.html
+++ b/src/app/sale/containers/sale-root/sale-root.component.html
@@ -22,6 +22,7 @@
             [saleItems]="saleItems$ | async"
             (delete)="currentSaleItem = $event; deletionConfirmModal.open()"
             (cancel)="onCancelSale()"
+            (save)="onSaveSale()"
             (increment)="onIncrementQty($event)"
             (decrement)="onDecrementQty($event)"
         ></app-selected-product-list>
