--- a/src/app/shared/components/incrementor/incrementor.component.scss
+++ b/src/app/shared/components/incrementor/incrementor.component.scss
@@ -1,4 +1,5 @@
 @import 'buttons.scss';
+@import 'forms.scss';
 
 .container {
     display: flex;
@@ -11,8 +12,17 @@ button {
 
     width: 20px;
     height: 20px;
+    margin: 0 2px;
 
     &:disabled {
         opacity: 0.5;
     }
+}
+
+input {
+    @extend %generic-input;
+    max-width: 60px;
+    height: 20px;
+    text-align: center;
+    padding: 0;
 }
