--- a/src/app/product/components/product-form/product-form.component.html
+++ b/src/app/product/components/product-form/product-form.component.html
@@ -36,6 +36,18 @@
                 <app-validation-error [control]="form.controls['quantity']"></app-validation-error>
             </div>
             <div class="control">
+                <label for="supplier">Type *</label>
+                <div class="custom-select">
+                    <ng-select
+                        [items]="types"
+                        formControlName="type"
+                        bindLabel="name"
+                        bindValue="value"
+                    ></ng-select>
+                </div>
+                <app-validation-error [control]="form.controls['type']"></app-validation-error>
+            </div>
+            <div class="control">
                 <label for="supplier">Fournisseur *</label>
                 <div class="custom-select">
                     <ng-select
