--- a/src/app/product/components/product-list/product-list.component.scss
+++ b/src/app/product/components/product-list/product-list.component.scss
@@ -1,13 +1,14 @@
 @import 'tables.scss';
 
 $c1Width: 20%;
-$c2Width: 15%;
-$c3Width: 15%;
+$c2Width: 10%;
+$c3Width: 10%;
 $c4Width: 10%;
 $c5Width: 10%;
 $c6Width: 20%;
 $c7Width: 10%;
-$tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width + $c6Width + $c7Width;
+$c8Width: 10%;
+$tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width + $c6Width + $c7Width + $c8Width;
 
 @mixin thTdWidth($width) {
     width: $width;
@@ -47,6 +48,10 @@ $tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width + $c6Width + $
         tbody td:nth-child(7),
         thead th:nth-child(7) {
             @include thTdWidth($c7Width);
+        }
+        tbody td:nth-child(8),
+        thead th:nth-child(8) {
+            @include thTdWidth($c8Width);
         }
 
         tr {
