--- a/src/app/product/components/product-list/product-list.component.scss
+++ b/src/app/product/components/product-list/product-list.component.scss
@@ -59,6 +59,10 @@ $tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width + $c6Width + $
                 &.empty {
                     color: red;
                 }
+
+                &.alert {
+                    color: orange;
+                }
             }
         }
     }
