[SUPPLIER] Add new Fields #master

--- a/src/app/supplier/components/supplier-form/supplier-form.component.html
+++ b/src/app/supplier/components/supplier-form/supplier-form.component.html
@@ -25,6 +25,24 @@
                 <input formControlName="contact" type="text" />
                 <app-validation-error [control]="form.controls['contact']"></app-validation-error>
             </div>
+            <div class="control">
+                <label>
+                    NIF
+                </label>
+                <input formControlName="nif" type="text" />
+            </div>
+            <div class="control">
+                <label>
+                    STAT
+                </label>
+                <input formControlName="stat" type="text" />
+            </div>
+            <div class="control">
+                <label>
+                    CIN
+                </label>
+                <input formControlName="cin" type="text" />
+            </div>
         </form>
     </main>
     <footer>
