--- a/src/app/supplier/components/supplier-list/supplier-list.component.html
+++ b/src/app/supplier/components/supplier-list/supplier-list.component.html
@@ -5,6 +5,9 @@
                 <th>Nom</th>
                 <th>Adresse</th>
                 <th>Contact</th>
+                <th>NIF</th>
+                <th>STAT</th>
+                <th>CIN</th>
                 <th></th>
             </tr>
         </thead>
@@ -16,6 +19,9 @@
                 <td>{{ supplier.name }}</td>
                 <td>{{ supplier.address }}</td>
                 <td>{{ supplier.contact }}</td>
+                <td>{{ supplier.nif }}</td>
+                <td>{{ supplier.stat }}</td>
+                <td>{{ supplier.cin }}</td>
                 <td class="actions">
                     <img
                         (click)="view.emit(supplier); currentSupplier = supplier"
