--- a/src/app/product/containers/product-form-root/product-form-root.component.html
+++ b/src/app/product/containers/product-form-root/product-form-root.component.html
@@ -8,6 +8,7 @@
         (edit)="onEdit($event)"
         (save)="onSave($event)"
         (cancel)="onCancelEdit(product)"
+        (close)="on"
     ></app-product-form>
 </div>
 
