[SALE] Refactoring #master

--- a/src/app/sale/containers/sale-root/sale-root.component.html
+++ b/src/app/sale/containers/sale-root/sale-root.component.html
@@ -23,8 +23,7 @@
             (delete)="currentSaleItem = $event; deletionConfirmModal.open()"
             (cancel)="onCancelSale()"
             (save)="onSaveSale()"
-            (increment)="onIncrementQty($event)"
-            (decrement)="onDecrementQty($event)"
+            (changeValue)="onChangeValue($event)"
         ></app-selected-product-list>
     </div>
 </div>
