--- a/src/app/sale/components/selected-product-list/selected-product-list.component.scss
+++ b/src/app/sale/components/selected-product-list/selected-product-list.component.scss
@@ -1,12 +1,14 @@
 @import 'tables.scss';
 @import 'buttons.scss';
+@import 'forms.scss';
 
 $c1Width: 20%;
 $c2Width: 20%;
 $c3Width: 20%;
-$c4Width: 20%;
+$c4Width: 10%;
 $c5Width: 20%;
-$tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width;
+$c6Width: 10%;
+$tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width + $c6Width;
 
 @mixin thTdWidth($width) {
     width: $width;
@@ -43,6 +45,10 @@ $tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width;
         thead th:nth-child(5) {
             @include thTdWidth($c5Width);
         }
+        tbody td:nth-child(6),
+        thead th:nth-child(56) {
+            @include thTdWidth($c6Width);
+        }
     }
 }
 
@@ -57,6 +63,13 @@ button {
     &:disabled {
         opacity: 0.5;
     }
+}
+
+input {
+    @extend %generic-input;
+    padding: 0;
+    text-align: center;
+    width: 100%;
 }
 
 .blue {
