Change qty refactoring #master

--- a/src/app/sale/containers/sale-root/sale-root.component.html
+++ b/src/app/sale/containers/sale-root/sale-root.component.html
@@ -23,7 +23,7 @@
             (delete)="currentSaleItem = $event; deletionConfirmModal.open()"
             (cancel)="onCancelSale()"
             (save)="onSaveSale()"
-            (changeValue)="onChangeValue($event)"
+            (changeQty)="onChangeQty($event)"
         ></app-selected-product-list>
     </div>
 </div>
