--- a/src/app/sale/components/selected-product-list/selected-product-list.component.scss
+++ b/src/app/sale/components/selected-product-list/selected-product-list.component.scss
@@ -49,6 +49,9 @@ $tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width + $c6Width;
         thead th:nth-child(56) {
             @include thTdWidth($c6Width);
         }
+        tbody td:nth-child(4) {
+            padding: 0;
+        }
     }
 }
 
