--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -27,6 +27,9 @@ $list-box-filter-label-text: #b71a73;
 // CHECKBOX:
 $checkbox-default-border: rgb(211, 211, 211);
 $checkbox-checked-background: #b71a73;
+// RADIO:
+$radio-default-border: rgb(211, 211, 211);
+$radio-checked-background: #b71a73;
 // SELECT:
 $select-border: #b71a73;
 $select-arrow-brackground: #b71a73;
