--- a/src/app/product/components/product-form/product-form.component.scss
+++ b/src/app/product/components/product-form/product-form.component.scss
@@ -30,3 +30,27 @@ button {
 .dark-purple {
     @extend %dark-purple-button;
 }
+
+.custom-control {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto 30px;
+    padding-bottom: 25px;
+}
+
+.radio-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.radio-control {
+    label {
+        @extend %generic-radio-container;
+    }
+}
+
+input[type="radio"] {
+    @extend %generic-radio-input;
+}
