[SELECTED PRODUCT] Get all client from shared #master

--- a/src/app/sale/components/selected-product-list/selected-product-list.component.html
+++ b/src/app/sale/components/selected-product-list/selected-product-list.component.html
@@ -20,7 +20,8 @@
         <label for="supplier">Client</label>
         <div class="custom-select">
             <ng-select
-                [items]="[]"
+                [items]="clients"
+                bindLabel="name"
                 [(ngModel)]="client"
             ></ng-select>
         </div>
