--- a/src/app/sale/containers/sale-root/sale-root.component.html
+++ b/src/app/sale/containers/sale-root/sale-root.component.html
@@ -19,10 +19,11 @@
     </div>
     <div class="selected-product-container">
         <app-selected-product-list
+            [clients]="clients$ | async"
             [saleItems]="saleItems$ | async"
             (delete)="currentSaleItem = $event; deletionConfirmModal.open()"
             (cancel)="onCancelSale()"
-            (save)="onSaveSale()"
+            (save)="onSaveSale($event)"
             (changeQty)="onChangeQty($event)"
         ></app-selected-product-list>
     </div>
