[SALE] Sale saved modal action fixing #master

--- a/src/app/sale/containers/sale-root/sale-root.component.html
+++ b/src/app/sale/containers/sale-root/sale-root.component.html
@@ -97,7 +97,7 @@
         </p>
     </ng-template>
     <ng-template #modalFooter>
-        <button (click)="onCloseChangingQtyErrorModal()" class="blue">OK</button>
+        <button (click)="saleSaved.close()" class="blue">OK</button>
     </ng-template>
 </modal>
 
