[SALE] Clearing #master

--- a/src/app/sale/components/selected-product-list/selected-product-list.component.html
+++ b/src/app/sale/components/selected-product-list/selected-product-list.component.html
@@ -64,8 +64,8 @@
         </tfoot>
     </table>
     <div class="buttons-container">
-        <button class="blue" [disabled]="billTotal === 0" (click)="onSave()">VALIDER</button>
-        <button class="dark-purple" [disabled]="!saleItemsLength" (click)="init(); cancel.emit()">
+        <button class="blue" [disabled]="billTotal === 0" (click)="onSave(); init()">VALIDER</button>
+        <button class="dark-purple" [disabled]="!saleItemsLength" (click)="cancel.emit(); init()">
             ANNULER
         </button>
     </div>
