--- a/src/app/client/containers/client-form-root/client-form-root.component.html
+++ b/src/app/client/containers/client-form-root/client-form-root.component.html
@@ -7,5 +7,6 @@
         (edit)="onEdit($event)"
         (save)="onSave($event)"
         (cancel)="onCancelEdit(client)"
+        (close)="onClose()"
     ></app-client-form>
 </div>
