--- a/src/app/supplier/containers/supplier-form-root/supplier-form-root.component.html
+++ b/src/app/supplier/containers/supplier-form-root/supplier-form-root.component.html
@@ -7,5 +7,6 @@
         (edit)="onEdit($event)"
         (save)="onSave($event)"
         (cancel)="onCancelEdit(supplier)"
+        (close)="onClose()"
     ></app-supplier-form>
 </div>
