--- a/src/app/client/containers/client-form-root/client-form-root.component.scss
+++ b/src/app/client/containers/client-form-root/client-form-root.component.scss
@@ -1,10 +1,5 @@
-@import 'buttons.scss';
-
 .container {
     height: 100%;
     width: 100%;
-}
-
-.blue {
-    @extend %blue-button;
+    overflow: hidden;
 }
