--- a/src/app/product/containers/product-list-root/product-list-root.component.scss
+++ b/src/app/product/containers/product-list-root/product-list-root.component.scss
@@ -1,48 +1,6 @@
-@import 'buttons.scss';
-@import 'texts.scss';
+@import 'master-detail.scss';
 
 .container {
-    background-color: #ffffff;
-    height: 100%;
-    display: grid;
-    grid-template-columns: auto 500px;
-    grid-template-rows: 67px 52px auto 50px;
-    padding: 25px 25px 25px 25px;
-    grid-template-areas:
-        'header     header'
-        'search-bar detail'
-        'list       detail'
-        'footer     detail';
-
-    header {
-        grid-area: header;
-        @extend %feature-title;
-    }
-
-    .search-bar {
-        grid-area: search-bar;
-    }
-
-    .list {
-        grid-area: list;
-    }
-
-    footer {
-        grid-area: footer;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .detail {
-        grid-area: detail;
-        margin-left: 30px;
-        border: solid 1px $light-gray;
-        border-radius: 8px;
-        padding: 25px;
-    }
-}
-
-.btn-new {
-    @extend %add-button;
+    @extend %master-detail;
+    grid-template-columns: 1% 70% 1% 27% 1%;
 }
