--- a/src/app/role/components/role-form/role-form.component.scss
+++ b/src/app/role/components/role-form/role-form.component.scss
@@ -7,7 +7,7 @@
 form {
     @extend %generic-form;
     max-width: unset;
-    max-height: calc(100vh - 170px - 20px * 2 - 30px * 2 - 67px - 90px - 40px);
+    max-height: calc(100vh - 150px - 10px * 2 - 25px * 2 - 67px - 90px - 40px);
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -72,11 +72,8 @@ ul {
 .button-container {
     display: flex;
     flex-direction: row;
+    justify-content: flex-end;
     margin: 0;
-
-    .fill {
-        flex: 1 1 auto;
-    }
 
     button {
         @extend %button;
