--- a/src/app/shared/components/search-bar/search-bar.component.scss
+++ b/src/app/shared/components/search-bar/search-bar.component.scss
@@ -6,6 +6,7 @@
     align-items: center;
     width: 100%;
     height: 50px;
+    max-height: 100%;
     background-color: white;
     border-style: solid;
     border-width: 1px 0 1px 0;
