--- a/src/styles/_details.scss
+++ b/src/styles/_details.scss
@@ -5,8 +5,8 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: 2% minmax(0, 1fr) 2%;
-    grid-template-rows: 40px auto 40px;
+    grid-template-columns: 4% minmax(0, 1fr) 4%;
+    grid-template-rows: auto minmax(0, 1fr) auto;
     grid-template-areas:
         ".      header      ."
         ".      main        ."
@@ -44,9 +44,16 @@
     footer {
         grid-area: footer;
 
+        .buttons {
+            width: 100%;
+            display: flex;
+            justify-content: flex-end;
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+
         button {
             @extend %button;
-            margin-bottom: 10px;
         }
     }
 }
