--- a/src/styles/_master-detail.scss
+++ b/src/styles/_master-detail.scss
@@ -8,15 +8,22 @@
 %master-detail {
     background-color: #ffffff;
     height: 100%;
+    width: 100%;
     display: grid;
-    grid-template-columns: auto 500px;
-    grid-template-rows: 67px 52px auto 50px;
-    padding: 25px 25px 25px 25px;
+    grid-template-columns: 1% 47% 1% 50% 1%;
+    grid-template-rows: 2% 7% 7% minmax(0, 1fr) 7% 2%;
     grid-template-areas:
-        "header     header"
-        "search-bar detail"
-        "list       detail"
-        "footer     detail";
+        ".      .          .        .            ."
+        ".      header     header   header       ."
+        ".      search-bar .        detail       ."
+        ".      list       .        detail       ."
+        ".      footer     .        detail       ."
+        ".      .          .        .            .";
+    transition: all 0.2s;   // Animation works only with firefox
+
+    &.detail-hidden {
+        grid-template-columns: 1% 98% 0% 0% 1%;
+    }
 
     header {
         grid-area: header;
@@ -36,17 +43,24 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        width: 100%;
+
+        button {
+            @extend %button;
+        }
+
+        .btn-new {
+            @extend %add-button;
+        }
     }
 
     .detail {
         grid-area: detail;
-        margin-left: 30px;
         border: solid 1px $light-gray;
         border-radius: 8px;
-        padding: 25px;
-    }
 
-    .btn-new {
-        @extend %add-button;
+        &.no-border {
+            border: 0px !important;
+        }
     }
 }
